<resources>
    <string name="app_name">Foto Locator</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="log_in">log in</string>
    <string name="register">register</string>
    <string name="photos">Photos</string>
    <string name="map">Map</string>
    <string name="maps_api_key">AIzaSyAAhOVSnpehESHnm8zl9RpJncOWZirD1ro</string>
</resources>